unpackaged/main/default/objects/Onboarding__c/fields/List_of_Top_Features__c.field-meta.xml
<CustomField>
    <fullName>List_of_Top_Features__c</fullName>
    <label>List of Top Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Calendaring</fullName>
            </value>
            <value>
                <fullName>Client Communications</fullName>
            </value>
            <value>
                <fullName>Client Intake</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Credit Card Processing</fullName>
            </value>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
            <value>
                <fullName>Document Automation</fullName>
            </value>
            <value>
                <fullName>eSignature</fullName>
            </value>
            <value>
                <fullName>Expense Tracking</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Invoice Management</fullName>
            </value>
            <value>
                <fullName>Invoicing - Payments Plus</fullName>
            </value>
            <value>
                <fullName>Large Processing Volume</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other Demo Area</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Process Walkthrough/Understanding</fullName>
            </value>
            <value>
                <fullName>Quick Bill</fullName>
            </value>
            <value>
                <fullName>Rate Review</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Ride Along</fullName>
            </value>
            <value>
                <fullName>Surcharging</fullName>
            </value>
            <value>
                <fullName>Text Messaging</fullName>
            </value>
            <value>
                <fullName>Time Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>