unpackaged/main/default/objects/Onboarding__c/fields/Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Date__c</fullName>
    <description>R1812905; Updated R1813936_v2</description>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>