unpackaged/main/default/objects/Onboarding__c/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <description>R1812905; Updated R1813936_v2</description>
    <label>Lost</label>
    <type>Date</type>
</CustomField>