unpackaged/main/default/objects/Onboarding__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <description>R1917595</description>
    <label>Manager Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>