unpackaged/main/default/objects/Onboarding__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Metrics</description>
    <label>Metrics</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Metrics__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Metrics__c</referenceTo>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>