unpackaged/main/default/objects/Onboarding__c/fields/Migrated_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Case_Count__c</fullName>
    <label>Migrated Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>