unpackaged/main/default/objects/Onboarding__c/fields/Migration_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Migration_Completed_Date__c</fullName>
    <label>Migration Completed Date</label>
    <type>Date</type>
</CustomField>