unpackaged/main/default/objects/Onboarding__c/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of record from legacy MC SFDC</description>
    <externalId>true</externalId>
    <label>MyCase ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>