unpackaged/main/default/objects/Onboarding__c/fields/MyCase_Subscriber_with_Templates__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Subscriber_with_Templates__c</fullName>
    <label>MyCase Subscriber with Templates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>