unpackaged/main/default/objects/Onboarding__c/fields/Next_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Next_Check_In__c</fullName>
    <description>R1813936_v2</description>
    <label>Next Check-In</label>
    <type>Date</type>
</CustomField>