unpackaged/main/default/objects/Onboarding__c/fields/Non_responsive__c.field-meta.xml
<CustomField>
    <fullName>Non_responsive__c</fullName>
    <description>R1920115</description>
    <label>Non-responsive</label>
    <type>Date</type>
</CustomField>