unpackaged/main/default/objects/Onboarding__c/fields/Onboarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1812905</description>
    <label>Onboarding Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>