unpackaged/main/default/objects/Onboarding__c/fields/Onboarding_POC__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboarding (Onboarding POC)</relationshipLabel>
    <relationshipName>Onboarding2</relationshipName>
    <type>Lookup</type>
</CustomField>