unpackaged/main/default/objects/Onboarding__c/fields/Onboarding_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Scheduled_Date__c</fullName>
    <label>Onboarding Scheduled Date</label>
    <type>Date</type>
</CustomField>