unpackaged/main/default/objects/Onboarding__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <label>Payment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>