unpackaged/main/default/objects/Onboarding__c/fields/Payments_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Payments_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for R1915468</description>
    <label>Payments Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>MyCase_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>