unpackaged/main/default/objects/Onboarding__c/fields/Phase_2_Days_in_data_import__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Days_in_data_import__c</fullName>
    <description>R2029843, Updated per #3955</description>
    <formula>IF(
NOT(ISBLANK(Phase_2_Import_Complete__c)),
CASE(MOD( Phase_2_Import_In_Progress__c - DATE(1985,6,24),7),
0 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( Phase_2_Import_Complete__c - Phase_2_Import_In_Progress__c )/7)*5)
,
CASE(MOD(Phase_2_Import_In_Progress__c - DATE(1985,6,24),7),
0 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( TODAY() - Phase_2_Import_In_Progress__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( TODAY() - Phase_2_Import_In_Progress__c )/7)*5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days to complete Phase 2 Data, excluding weekends.</inlineHelpText>
    <label>Phase 2: Days in data import</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>