unpackaged/main/default/objects/Onboarding__c/fields/Phase_2_Import_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Import_In_Progress__c</fullName>
    <description>MC; R2029390; Edited: Auto</description>
    <label>Phase 2: Import In Progress</label>
    <type>Date</type>
</CustomField>