unpackaged/main/default/objects/Onboarding__c/fields/Phase_2_Import_Sign_off__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Import_Sign_off__c</fullName>
    <description>MC; R2029390; Edited: Auto</description>
    <label>Phase 2: Import Sign-off</label>
    <type>Date</type>
</CustomField>