unpackaged/main/default/objects/Onboarding__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan</valueSetName>
    </valueSet>
</CustomField>