unpackaged/main/default/objects/Onboarding__c/fields/Possible_Documents__c.field-meta.xml
<CustomField>
    <fullName>Possible_Documents__c</fullName>
    <label>Possible Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Possible_Documents</valueSetName>
    </valueSet>
</CustomField>