unpackaged/main/default/objects/Onboarding__c/fields/Primary_Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Practice_Area__c</fullName>
    <formula>TEXT(Account__r.Primary_Practice_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account: Primary Practice Area</inlineHelpText>
    <label>Primary Practice Area</label>
    <type>Text</type>
</CustomField>