unpackaged/main/default/objects/Onboarding__c/fields/Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the product environment</inlineHelpText>
    <label>Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>