unpackaged/main/default/objects/Onboarding__c/fields/Projected_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Go_Live_Date__c</fullName>
    <label>Projected Go Live Date</label>
    <type>Date</type>
</CustomField>