unpackaged/main/default/objects/Onboarding__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <label>Promo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>