unpackaged/main/default/objects/Onboarding__c/fields/Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>