unpackaged/main/default/objects/Onboarding__c/fields/Sent_Onboarding_Workbook__c.field-meta.xml
<CustomField>
    <fullName>Sent_Onboarding_Workbook__c</fullName>
    <label>Sent Onboarding Workbook?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>