unpackaged/main/default/objects/Onboarding__c/fields/Sign_off__c.field-meta.xml
<CustomField>
    <fullName>Sign_off__c</fullName>
    <description>R1812905, R1813936_v2, R2029390</description>
    <label>Phase 1: Import Sign-off</label>
    <type>Date</type>
</CustomField>