unpackaged/main/default/objects/Onboarding__c/fields/Software_Discount__c.field-meta.xml
<CustomField>
    <fullName>Software_Discount__c</fullName>
    <label>Software Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>