unpackaged/main/default/objects/Onboarding__c/fields/Software_Tier__c.field-meta.xml
<CustomField>
    <fullName>Software_Tier__c</fullName>
    <label>Software Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>