unpackaged/main/default/objects/Onboarding__c/fields/Special_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing__c</fullName>
    <label>Special Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Interchange Plus (IC+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>