unpackaged/main/default/objects/Onboarding__c/fields/Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered__c</fullName>
    <description>R1812905</description>
    <label>Stage Entered</label>
    <type>Date</type>
</CustomField>