unpackaged/main/default/objects/Onboarding__c/fields/Third_Party_Migrator__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Migrator__c</fullName>
    <description>This field provides the list of external teams who provided migration assistance.</description>
    <label>Third-Party Migrator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Data_Migration_Controlled_By__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Universal Migrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>