unpackaged/main/default/objects/Onboarding__c/fields/Total_Days_In_Data_Import__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_In_Data_Import__c</fullName>
    <description>Combines Phase 1 &amp; Phase 2 Days in Data Import</description>
    <formula>Days_In_Data_Import__c +  Phase_2_Days_in_data_import__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days In Data Import</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>