unpackaged/main/default/objects/Onboarding__c/fields/Total_Users_PE__c.field-meta.xml
<CustomField>
    <fullName>Total_Users_PE__c</fullName>
    <formula>Product_Environment__r.Total_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the value in Total Users field on the related Product Environment</inlineHelpText>
    <label>Total Users (PE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>