unpackaged/main/default/objects/Onboarding__c/fields/Underwriting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Notes__c</fullName>
    <label>Underwriting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>