unpackaged/main/default/objects/Onboarding__c/fields/Universal_Migrator__c.field-meta.xml
<CustomField>
    <fullName>Universal_Migrator__c</fullName>
    <label>Universal Migrator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>