unpackaged/main/default/objects/Onboarding__c/fields/Used_Doc_Gen_Previously__c.field-meta.xml
<CustomField>
    <fullName>Used_Doc_Gen_Previously__c</fullName>
    <label>Used Doc Gen Previously</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>