unpackaged/main/default/objects/Onboarding__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>Used when users want to reference the My Onboarding list view.</description>
    <formula>Onboarding_Manager__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID</label>
    <type>Checkbox</type>
</CustomField>