unpackaged/main/default/objects/Onboarding__c/fields/User_Licenses__c.field-meta.xml
<CustomField>
    <fullName>User_Licenses__c</fullName>
    <label>User Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>