unpackaged/main/default/objects/Onboarding__c/fields/Waiting_on_Customer__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_Customer__c</fullName>
    <description>R1812905</description>
    <label>Waiting on Customer</label>
    <type>Date</type>
</CustomField>