unpackaged/main/default/objects/Onboarding__c/fields/Wild_Apricot_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Wild_Apricot_Start_Date__c</fullName>
    <label>Wild Apricot Start Date</label>
    <type>Date</type>
</CustomField>