unpackaged/main/default/objects/Onboarding__c/fields/Woodpecker_Subscription_Interval__c.field-meta.xml
<CustomField>
    <fullName>Woodpecker_Subscription_Interval__c</fullName>
    <label>Woodpecker Subscription Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Woodpecker_Subscription_Interval</valueSetName>
    </valueSet>
</CustomField>