unpackaged/main/default/objects/Onboarding__c/fields/zzOnboarding_Contact__c.field-meta.xml
<CustomField>
    <fullName>zzOnboarding_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzOnboarding Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding2</relationshipName>
    <type>Lookup</type>
</CustomField>