unpackaged/main/default/objects/Onboarding__c/recordTypes/AffiniPay.recordType-meta.xml
<RecordType>
    <fullName>AffiniPay</fullName>
    <active>true</active>
    <description>Affinipay Onboarding</description>
    <label>AffiniPay</label>
</RecordType>