unpackaged/main/default/objects/Onboarding__c/recordTypes/CASEpeer.recordType-meta.xml
<RecordType>
    <fullName>CASEpeer</fullName>
    <active>true</active>
    <description>CASEpeer Onboarding</description>
    <label>CASEpeer</label>
</RecordType>