unpackaged/main/default/objects/Onboarding__c/recordTypes/ClientPay.recordType-meta.xml
<RecordType>
    <fullName>ClientPay</fullName>
    <active>true</active>
    <description>ClientPay Onboarding</description>
    <label>ClientPay</label>
</RecordType>