unpackaged/main/default/objects/Onboarding__c/recordTypes/CPACharge.recordType-meta.xml
<RecordType>
    <fullName>CPACharge</fullName>
    <active>true</active>
    <description>CPACharge Onboarding</description>
    <label>CPACharge</label>
</RecordType>