unpackaged/main/default/objects/Onboarding__c/recordTypes/Docketwise.recordType-meta.xml
<RecordType>
    <fullName>Docketwise</fullName>
    <active>true</active>
    <description>Docketwise Onboarding</description>
    <label>Docketwise</label>
</RecordType>