unpackaged/main/default/objects/Onboarding__c/recordTypes/LawPay_Payments.recordType-meta.xml
<RecordType>
    <fullName>LawPay_Payments</fullName>
    <active>true</active>
    <description>LawPay Payments Onboarding</description>
    <label>LawPay Payments</label>
</RecordType>