unpackaged/main/default/objects/Onboarding__c/recordTypes/LawPay_Software.recordType-meta.xml
<RecordType>
    <fullName>LawPay_Software</fullName>
    <active>true</active>
    <description>LawPay Software Onboarding</description>
    <label>LawPay Software</label>
</RecordType>