unpackaged/main/default/objects/Onboarding__c/recordTypes/MyCase.recordType-meta.xml
<RecordType>
    <fullName>MyCase</fullName>
    <active>true</active>
    <description>MyCase Onboarding</description>
    <label>MyCase</label>
</RecordType>