unpackaged/main/default/objects/Onboarding__c/recordTypes/Woodpecker.recordType-meta.xml
<RecordType>
    <fullName>Woodpecker</fullName>
    <active>true</active>
    <description>Woodpecker Onboarding</description>
    <label>Woodpecker</label>
</RecordType>