unpackaged/main/default/objects/Onboarding__c/validationRules/MC_RequireOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>MC_RequireOpp</fullName>
    <active>true</active>
    <description>R1812905</description>
    <errorConditionFormula>ISCHANGED(Data_Migration_Stage__c)&amp;&amp; 
OR(ISPICKVAL(Data_Migration_Stage__c,&#39;Live&#39;),
ISPICKVAL(Data_Migration_Stage__c,&#39;Lost&#39;))&amp;&amp; 
ISBLANK(Opportunity__c)</errorConditionFormula>
    <errorMessage>Opportunity is required to update Data Migration Stage to &#39;Live&#39; or &#39;Lost&#39;</errorMessage>
</ValidationRule>