unpackaged/main/default/objects/Onboarding__c/validationRules/MC_RequirePOC.validationRule-meta.xml
<ValidationRule>
    <fullName>MC_RequirePOC</fullName>
    <active>true</active>
    <description>R1812905</description>
    <errorConditionFormula>ISCHANGED(Data_Migration_Stage__c)&amp;&amp;
ISPICKVAL(Data_Migration_Stage__c,&#39;Live&#39;)&amp;&amp;
ISBLANK(Firm_POC__c)</errorConditionFormula>
    <errorMessage>Firm POC is required to update Data Migration Stage to &#39;Live&#39;</errorMessage>
</ValidationRule>