unpackaged/main/default/objects/Onboarding__c/validationRules/Require_Payments_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Payments_Opportunity</fullName>
    <active>false</active>
    <description>Payments Opportunity is required to update Data Migration Stage to &#39;Live&#39; or &#39;Lost&#39;; Created for R1915468</description>
    <errorConditionFormula>ISCHANGED(Data_Migration_Stage__c)&amp;&amp; 
OR(ISPICKVAL(Data_Migration_Stage__c,&#39;Live&#39;),
ISPICKVAL(Data_Migration_Stage__c,&#39;Lost&#39;))&amp;&amp; 
ISBLANK(Payments_Opportunity__c)</errorConditionFormula>
    <errorDisplayField>Payments_Opportunity__c</errorDisplayField>
    <errorMessage>Payments Opportunity is required to update Data Migration Stage to &#39;Live&#39; or &#39;Lost&#39;</errorMessage>
</ValidationRule>