unpackaged/main/default/objects/Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>zzOnboarding_Contact__c</columns>
    <columns>Onboarding_Manager__c</columns>
    <columns>Onboarding_POC__c</columns>
    <columns>Data_Migration_Stage__c</columns>
    <columns>Churn_Risk__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>