unpackaged/main/default/objects/Onboarding__c/listViews/All_CASEpeer_Onboarding_Records.listView-meta.xml
<ListView>
    <fullName>All_CASEpeer_Onboarding_Records</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Onboarding_Manager__c</columns>
    <columns>Onboarding_POC__c</columns>
    <columns>Data_Migration_Stage__c</columns>
    <columns>Churn_Risk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Onboarding__c.CASEpeer</value>
    </filters>
    <label>All CASEpeer Onboarding Records</label>
</ListView>