unpackaged/main/default/objects/Onboarding__c/listViews/LawPay_Onboarding.listView-meta.xml
<ListView>
    <fullName>LawPay_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Onboarding_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Onboarding__c.LawPay_Payments,Onboarding__c.LawPay_Software</value>
    </filters>
    <label>LawPay Onboarding</label>
</ListView>